--- a/index.html
+++ b/index.html
@@ -8,8 +8,77 @@
     <link rel="stylesheet" href="style.css" />
     <title>My Portfolio</title>
   </head>
+
   <body>
-    <h1>ポートフォリオサイト</h1>
+    <header>MyPortfolio</header>
+    <nav>
+      <ul>
+        <li><a href="#">TOP</a></li>
+        <li><a href="#profile">Profile</a></li>
+        <li><a href="#skill">Skill</a></li>
+      </ul>
+    </nav>
+    <div class="gazou">
+      <img src="images/YAT923_6_TP_V.jpg" />
+    </div>
+
+    <div class="profile">
+      <h1 id="profile">Profile</h1>
+      <div class="name">
+        <p class="name">Name</p>
+        <p class="name1">今野航太朗</p>
+        <p class="name2">ふりがな：いまのこうたろう</p>
+      </div>
+      <div class="birthday">
+        <p class="birthday">Birthday</p>
+        <p class="birthday1">22</p>
+      </div>
+      <div class="university">
+        <p class="university">University</p>
+        <p class="university1">長崎県立大学</p>
+      </div>
+      <div class="major">
+        <p class="major">Major</p>
+        <p class="major1">情報システム学科</p>
+      </div>
+      <div class="grade">
+        <p class="grade">Grade</p>
+        <p class="grade1">3年</p>
+      </div>
+      <div class="hobby">
+        <p class="hobby">Hobby</p>
+        <p class="hobby1">ゲーム</p>
+        <p class="hobby2">動画を見る</p>
+        <p class="hobby3">音楽を聴く</p>
+      </div>
+    </div>
+
+    <div class="skill">
+      <h1 id="skill">Skill</h1>
+      <div class="license">
+        <p class="license">License</p>
+        <p class="license1">ITパスポート試験</p>
+        <p class="license2">Webデザイナー検定エキスパート</p>
+        <p class="license3">基本情報技術者試験　勉強中</p>
+      </div>
+      <div class="product">
+        <p class="product">Product</p>
+        <p class="product1">なし</p>
+      </div>
+    </div>
+
+    <div class="sozai">
+      <a>使わせていただいた素材：</a>
+      <a href="https://www.pakutaso.com">無料の写真素材「ぱくたそ」</a>
+    </div>
+
+    <nav>
+      <ul>
+        <li><a href="#">TOP</a></li>
+        <li><a href="#">Profile</a></li>
+        <li><a href="#">Skill</a></li>
+      </ul>
+    </nav>
     <script src="main.js"></script>
   </body>
 </html>
