--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
       <div class="name">
         <p class="name">Name</p>
         <p class="name1">今野航太朗</p>
+        <p class="name2">いまのこうたろう</p>
       </div>
       <div class="birthday">
         <p class="birthday">Birthday</p>
