--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </ul>
     </nav>
     <div class="gazou">
-      <img src="images/YAT923_6_TP_V.jpg" />
+      <img src="wave.svg" />
     </div>
 
     <div class="profile">
