--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
       <ul>
         <li><a href="#">TOP</a></li>
         <li><a href="#profile">Profile</a></li>
-        <li><a href="#skill">Skill</a></li>
+        <li><a href="#work">Work</a></li>
       </ul>
     </nav>
-    <div class="gazou">
-      <img src="wave.png" />
-    </div>
+    
 
     <div class="profile">
       <h1 id="profile">Profile</h1>
@@ -28,10 +26,6 @@
         <p class="name">Name</p>
         <p class="name1">今野航太朗</p>
         <p class="name2">いまのこうたろう</p>
-      </div>
-      <div class="birthday">
-        <p class="birthday">Birthday</p>
-        <p class="birthday1">22</p>
       </div>
       <div class="university">
         <p class="university">University</p>
@@ -41,20 +35,16 @@
         <p class="major">Major</p>
         <p class="major1">情報システム学科</p>
       </div>
-      <div class="grade">
-        <p class="grade">Grade</p>
-        <p class="grade1">3年</p>
-      </div>
       <div class="hobby">
         <p class="hobby">Hobby</p>
-        <p class="hobby1">ゲーム</p>
-        <p class="hobby2">動画を見る</p>
-        <p class="hobby3">音楽を聴く</p>
+        <p class="hobby1">動画を見る</p>
+        <p class="hobby2">音楽を聴く</p>
+        <p class="hobby3">小説を読む</p>
       </div>
     </div>
 
-    <div class="skill">
-      <h1 id="skill">Skill</h1>
+    <div class="work">
+      <h1 id="skill">Work</h1>
       <div class="license">
         <p class="license">License</p>
         <p class="license1">ITパスポート試験</p>
@@ -67,16 +57,13 @@
       </div>
     </div>
 
-    <div class="sozai">
-      <a>使わせていただいた素材：</a>
-      <a href="https://www.pakutaso.com">無料の写真素材「ぱくたそ」</a>
-    </div>
+
 
     <nav>
       <ul>
         <li><a href="#">TOP</a></li>
         <li><a href="#">Profile</a></li>
-        <li><a href="#">Skill</a></li>
+        <li><a href="#">Work</a></li>
       </ul>
     </nav>
     <script src="main.js"></script>
