--- a/index.html
+++ b/index.html
@@ -37,23 +37,23 @@
       </div>
       <div class="hobby">
         <p class="hobby">Hobby</p>
-        <p class="hobby1">動画を見る</p>
-        <p class="hobby2">音楽を聴く</p>
-        <p class="hobby3">小説を読む</p>
+        <p class="hobby1">音楽を聴く</p>
+        <p class="hobby2">小説を読む</p>
       </div>
-    </div>
-
-    <div class="work">
-      <h1 id="skill">Work</h1>
       <div class="license">
         <p class="license">License</p>
         <p class="license1">ITパスポート試験</p>
         <p class="license2">Webデザイナー検定エキスパート</p>
-        <p class="license3">基本情報技術者試験　勉強中</p>
+        <p class="license3">普通自動車第一種運転免許</p>
       </div>
+    </div>
+
+    <div class="work">
+      <h1 id="work">Work</h1>
       <div class="product">
         <p class="product">Product</p>
-        <p class="product1">なし</p>
+        <a href="https://team-original-app-72914.web.app/"><img src="samuneb.jpg" width="120" height="100"></a>
+        <p class="product1">https://team-original-app-72914.web.app/</p>
       </div>
     </div>
 
