--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
     <nav>
       <ul>
         <li><a href="#">TOP</a></li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">Work</a></li>
+        <li><a href="#profile">Profile</a></li>
+        <li><a href="#work">Work</a></li>
       </ul>
     </nav>
     <script src="main.js"></script>
