--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
       <h1 id="work">Work</h1>
       <div class="product">
         <p class="product">Product</p>
-        <a href="https://team-original-app-72914.web.app/"><img src="samuneb.jpg" width="250" height="200"></a>
+        <a href="https://team-original-app-72914.web.app/"><img src="images/samuneb.jpg" width="250" height="200"></a>
         <p class="product1">ECサイト検索ができるWebアプリケーションを開発しました</p>
         <p class="explanation">楽天、Google、IT Bookstoreの3社の検索結果を一つの画面に表示できるようになっています。</p>
-        <img src="open.jpg" width="250" height="200">
+        <img src="images/open.jpg" width="250" height="200">
         <p class="product2">ポスター</p>
         <p class="explanation">長崎県立大学の架空のオープンキャンパスのポスターを作成しました。</p>
-        <img src="slenna256.png" width="250" height="200">
+        <img src="images/slenna256.png" width="250" height="200">
         <p class="product2">卒業研究</p>
         <p class="explanation">卒業研究の進行状況です。<br>現在は弓道の矢を放つ前の動作である「会」の状態を、画像処理のエッジ検出をするところまで進んでいます。</p>
       </div>
