--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <p class="explanation">楽天、Google、IT Bookstoreの3社の検索結果を一つの画面に表示できるようになっています。</p>
         <img src="images/open.jpg" width="700" height="500">
         <p class="product2">ポスター</p>
-        <p class="explanation">長崎県立大学の架空のオープンキャンパスのポスターを作成しました。</p>
+        <p class="explanation">Adobe Illustratorを用いて、長崎県立大学の架空のオープンキャンパスのポスターを作成しました。</p>
         <img src="images/slenna256.png" width="700" height="500">
         <p class="product2">卒業研究</p>
         <p class="explanation">卒業研究の進行状況です。<br>現在は弓道の矢を放つ前の動作である「会」の状態を、画像処理のエッジ検出をするところまで進んでいます。</p>
