--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <header>MyPortfolio</header>
+    <header>Koutaro's Portfolio</header>
     <nav>
       <ul>
         <li><a href="#">TOP</a></li>
@@ -61,6 +61,16 @@
       </div>
     </div>
 
+    <div class="infomation">
+      <p class="info">連絡先</p>
+      <p class="info">〒851-2130</p>
+      <p class="info">長崎県西彼杵郡長与町まなび野1丁目1－1</p>
+      <p class="info">長崎県立大学シーボルト校</p>
+      <p class="info">情報システム学部</p>
+      <p class="info">今野航太朗</p>
+      <p class="info">Mail： bs120003@sun.ac.jp</p>
+    </div>
+
 
 
     <nav>
@@ -69,6 +79,7 @@
         <li><a href="#profile">Profile</a></li>
         <li><a href="#work">Work</a></li>
       </ul>
+      <p class="right">©Koutaro's Portfolio All rights reserved.</p>
     </nav>
     <script src="main.js"></script>
   </body>
