--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
       </div>
       <div class="hobby">
         <p class="hobby">Hobby</p>
-        <p class="hobby1">音楽を聴く</p>
-        <p class="hobby2">小説を読む</p>
+        <p class="hobby1">プログラミング</p>
+        <p class="hobby2">弓道</p>
       </div>
       <div class="license">
         <p class="license">License</p>
