--- a/work.html
+++ b/work.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css" />
+    <link rel="stylesheet" href="style.css" />
+    <title>My Portfolio</title>
+  </head>
 
+  <body>
+    <header>Koutaro's Portfolio</header>
+    <nav>
+      <ul>
+        <li><a href="index.html">TOP</a></li>
+        <li><a href="index.html">Profile</a></li>
+        <li><a href="work.html">Work</a></li>
+      </ul>
+    </nav>
+    
+
+    <div class="work">
+      <h1 id="work">作品</h1>
+      <div class="product">
+        <a href="https://team-original-app-72914.web.app/"><img src="images/samuneb.jpg" width="250" height="200"></a>
+        <p class="product1">ECサイト検索ができるWebアプリケーションを開発しました</p>
+        <p class="explanation">楽天、Google、IT Bookstoreの3社の検索結果を一つの画面に表示できるようになっています。</p>
+        <p class="extention1">IT Bookstoreは海外のサイトであるため日本語での検索に対応していません。そのため、検索結果は英語での検索時のみ表示されるようになっています。</p>
+
+        <img src="images/slenna256.png" width="700" height="500">
+        <p class="product2">卒業研究</p>
+        <p class="explanation">卒業研究の進行状況です。<br>現在は弓道の矢を放つ前の動作である「会」の状態を、画像処理のエッジ検出をするところまで進んでいます。</p>
+      </div>
+    </div>
+
+    <div class="infomation">
+      <p class="info">連絡先</p>
+      <p class="info">〒851-2130</p>
+      <p class="info">長崎県西彼杵郡長与町まなび野1丁目1－1</p>
+      <p class="info">長崎県立大学シーボルト校</p>
+      <p class="info">情報システム学部</p>
+      <p class="info">今野航太朗</p>
+      <p class="info">Mail： bs120003@sun.ac.jp</p>
+    </div>
+
+
+
+    <nav>
+      <ul>
+        <li><a href="index.html">TOP</a></li>
+        <li><a href="index.html">Profile</a></li>
+        <li><a href="work.html">Work</a></li>
+      </ul>
+      <p class="right">©Koutaro's Portfolio All rights reserved.</p>
+    </nav>
+    <script src="main.js"></script>
+  </body>
+</html>
