--- a/index.html
+++ b/index.html
@@ -15,51 +15,43 @@
       <ul>
         <li><a href="#">TOP</a></li>
         <li><a href="#profile">Profile</a></li>
-        <li><a href="#work">Work</a></li>
+        <li><a href="work.html">Work</a></li>
       </ul>
     </nav>
-    
+
+    <div class="gazou">
+    </div> 
 
     <div class="profile">
-      <h1 id="profile">Profile</h1>
+      <h1 id="profile">自己紹介</h1>
       <div class="name">
-        <p class="name">Name</p>
+        <p class="name">名前</p>
         <p class="name1">今野航太朗</p>
         <p class="name2">いまのこうたろう</p>
       </div>
       <div class="university">
-        <p class="university">University</p>
+        <p class="university">大学</p>
         <p class="university1">長崎県立大学</p>
       </div>
       <div class="major">
-        <p class="major">Major</p>
+        <p class="major">専攻</p>
         <p class="major1">情報システム学科</p>
       </div>
       <div class="hobby">
-        <p class="hobby">Hobby</p>
+        <p class="hobby">趣味</p>
         <p class="hobby1">プログラミング</p>
         <p class="hobby2">弓道</p>
       </div>
       <div class="license">
-        <p class="license">License</p>
+        <p class="license">資格</p>
         <p class="license1">ITパスポート試験</p>
         <p class="license2">Webデザイナー検定エキスパート</p>
         <p class="license3">普通自動車第一種運転免許</p>
       </div>
+
+      
     </div>
 
-    <div class="work">
-      <h1 id="work">Work</h1>
-      <div class="product">
-        <a href="https://team-original-app-72914.web.app/"><img src="images/samuneb.jpg" width="250" height="200"></a>
-        <p class="product1">ECサイト検索ができるWebアプリケーションを開発しました</p>
-        <p class="explanation">楽天、Google、IT Bookstoreの3社の検索結果を一つの画面に表示できるようになっています。</p>
-
-        <img src="images/slenna256.png" width="700" height="500">
-        <p class="product2">卒業研究</p>
-        <p class="explanation">卒業研究の進行状況です。<br>現在は弓道の矢を放つ前の動作である「会」の状態を、画像処理のエッジ検出をするところまで進んでいます。</p>
-      </div>
-    </div>
 
     <div class="infomation">
       <p class="info">連絡先</p>
@@ -77,7 +69,7 @@
       <ul>
         <li><a href="#">TOP</a></li>
         <li><a href="#profile">Profile</a></li>
-        <li><a href="#work">Work</a></li>
+        <li><a href="work.html">Work</a></li>
       </ul>
       <p class="right">©Koutaro's Portfolio All rights reserved.</p>
     </nav>
