--- a/work.html
+++ b/work.html
@@ -25,8 +25,8 @@
       <div class="product">
         <a href="https://team-original-app-72914.web.app/"><img src="images/samuneb.jpg" width="250" height="200"></a>
         <p class="product1">ECサイト検索ができるWebアプリケーションを開発しました</p>
-        <p class="explanation">楽天、Google、IT Bookstoreの3社の検索結果を一つの画面に表示できるようになっています。</p>
-        <p class="extention1">IT Bookstoreは海外のサイトであるため日本語での検索に対応していません。そのため、検索結果は英語での検索時のみ表示されるようになっています。</p>
+        <p class="explanation">楽天、Google、IT Bookstoreの3社の検索結果を一つの画面に表示できるようになっています。<br>IT Bookstoreは海外のサイトであるため日本語での検索に対応していません。そのため、検索結果は英語での検索時のみ表示されるようになっています。</p>
+        
 
         <img src="images/slenna256.png" width="700" height="500">
         <p class="product2">卒業研究</p>
