--- a/index.html
+++ b/index.html
@@ -25,25 +25,25 @@
     <div class="profile">
       <h1 id="profile">自己紹介</h1>
       <div class="name">
-        <p class="name">名前</p>
+        <p class="name"><strong>名前</strong></p>
         <p class="name1">今野航太朗</p>
         <p class="name2">いまのこうたろう</p>
       </div>
       <div class="university">
-        <p class="university">大学</p>
+        <p class="university"><strong>大学</strong></p>
         <p class="university1">長崎県立大学</p>
       </div>
       <div class="major">
-        <p class="major">専攻</p>
+        <p class="major"><strong>専攻</strong></p>
         <p class="major1">情報システム学科</p>
       </div>
       <div class="hobby">
-        <p class="hobby">趣味</p>
+        <p class="hobby"><strong>趣味</strong></p>
         <p class="hobby1">プログラミング</p>
         <p class="hobby2">弓道</p>
       </div>
       <div class="license">
-        <p class="license">資格</p>
+        <p class="license"><strong>資格</strong></p>
         <p class="license1">ITパスポート試験</p>
         <p class="license2">Webデザイナー検定エキスパート</p>
         <p class="license3">普通自動車第一種運転免許</p>
@@ -54,7 +54,7 @@
 
 
     <div class="infomation">
-      <p class="info">連絡先</p>
+      <p class="info"><strong>連絡先</strong></p>
       <p class="info">〒851-2130</p>
       <p class="info">長崎県西彼杵郡長与町まなび野1丁目1－1</p>
       <p class="info">長崎県立大学シーボルト校</p>
