--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     </nav>
 
     <div class="gazou">
+      <img src="IMG_0628.JPG">
     </div> 
 
     <div class="profile">
+      
       <h1 id="profile">自己紹介</h1>
       <div class="name">
         <p class="name"><strong>名前</strong></p>
