--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
 
     <div class="gazou">
-      <img src="IMG_0628.JPG">
+      <img src="https://github.com/IK-ge/my-portfolio/blob/pre/images/IMG_0628.JPG?raw=true">
     </div> 
 
     <div class="profile">
