--- a/work.html
+++ b/work.html
@@ -23,13 +23,13 @@
     <div class="work">
       <h1 id="work">作品、活動</h1>
       <div class="product">
-        <a href="https://team-original-app-72914.web.app/"><img src="images/samuneb.jpg" width="400" height="350"></a>
+        <a href="https://team-original-app-72914.web.app/"><img src="images/samuneb.jpg" width="450" height="350"></a>
         <p class="product1">ECサイト検索ができるWebアプリケーションを開発しました</p>
         <p class="explanation">大学で学んだことを形にしたい想いからWebアプリケーションを開発する大学外のイベントに参加しました。<br>そのイベントで学んだ技術を用いたためプログラミングに苦戦しましたが、同じ開発のメンバーとお互いに助け合うことで完成させることができました。<br>楽天、Google、IT Bookstoreの3社の検索結果を一つの画面に表示できるようになっています。<br>IT Bookstoreは海外のサイトであるため日本語での検索に対応していません。そのため、検索結果は英語での検索時のみ表示されるようになっています。</p>
 
-        <img src="images/202309131558522136.jpg" width="400" height="350">
+        <img src="images/202309131558522136.jpg" width="450" height="350">
         <p class="product1">「ながさきデジタルDEJI-MA産業メッセ2023」にボランティアとして参加しました</p>
-        <p class="explanation">教授の展示のサポートとして参加しました。約80の企業や団体が出展するイベントで2日間で約4000人が来場されました。<br>普段近くで見ることのできないデジタル技術を見ることができただけでなく、出典をサポートする側として、対応や説明を通して来場者の方と話す中で教授の作った作品に興味を持っていただけたことが嬉しく思いました。<br>イベントの詳細は<a href="https://digital-dejima.jp/">こちら</a>。イベントの様子は<a href="https://sun.ac.jp/pages/30188/detail=1/b_id=35946/r_id=1814#block35946-1814">こちら</a>。</p>
+        <p class="explanation">教授の展示のサポートとして参加しました。約80の企業や団体が出展するイベントで2日間で約4000人が来場されました。<br>普段近くで見ることのできないデジタル技術を見ることができただけでなく、<br>出典をサポートする側として、対応や説明を通して来場者の方と話す中で教授の作った作品に興味を持っていただけたことが嬉しく思いました。<br>イベントの詳細は<a href=" https://digital-dejima.jp/" target="_blank">こちら</a>。イベントの様子は<a href=" https://sun.ac.jp/pages/30188/detail=1/b_id=35946/r_id=1814#block35946-1814" target="_blank">こちら</a>。</p>
         
         <img src="images/slenna256.png" width="700" height="500">
         <p class="product2">卒業研究</p>
