--- a/work.html
+++ b/work.html
@@ -29,7 +29,7 @@
 
         <img src="images/202309131558522136.jpg" width="450" height="300">
         <p class="product1">「ながさきデジタルDEJI-MA産業メッセ2023」にボランティアとして参加しました</p>
-        <p class="explanation">教授の展示のサポートとして参加しました。約80の企業や団体が出展するイベントで2日間で約4000人が来場されました。<br>普段近くで見ることのできないデジタル技術を見ることができただけでなく、<br>出典をサポートする側として、対応や説明を通して来場者の方と話す中で教授の作った作品に興味を持っていただけたことが嬉しく思いました。<br>イベントの詳細は<a href=" https://digital-dejima.jp/" target="_blank">こちら</a>。イベントの様子は<a href=" https://sun.ac.jp/pages/30188/detail=1/b_id=35946/r_id=1814#block35946-1814" target="_blank">こちら</a>。</p>
+        <p class="explanation">教授の展示のサポートとして参加しました。約80の企業や団体が出展するイベントで2日間で約4000人が来場されました。<br>普段近くで見ることのできないデジタル技術を見ることができただけでなく、<br>出典をサポートする側として、対応や説明を通して来場者の方と話す中で教授の作った作品に興味を持っていただけたことが嬉しく思いました。<br>イベントの詳細は"<a href=" https://digital-dejima.jp/" target="_blank">こちら</a>"。イベントの様子は"<a href=" https://sun.ac.jp/pages/30188/detail=1/b_id=35946/r_id=1814#block35946-1814" target="_blank">こちら</a>"。</p>
         
         <img src="images/slenna256.png" width="700" height="500">
         <p class="product2">卒業研究</p>
