--- a/work.html
+++ b/work.html
@@ -29,7 +29,8 @@
 
         
         <p class="product1">「ながさきデジタルDEJI-MA産業メッセ2023」にボランティアとして参加しました</p>
-        <p class="explanation">9月7日と8日の2日間にわたって開催された「ながさきデジタルDEJI-MA産業メッセ」に長崎県立大学情報システム学科と看護学科が合同で出店したのでボランティアとして参加しました。約80の企業や団体が出展するイベントで2日間で約4000人が来場されました。<br>普段近くで見ることのできないデジタル技術を見ることができただけでなく、<br>出典をサポートする側として、対応や説明を通して来場者の方と話す中で教授の作った作品に興味を持っていただけたことが嬉しく思いました。<br>イベントの詳細は<a href=" https://digital-dejima.jp/" target="_blank">こちら</a>。大学HPでの紹介は<a href=" https://sun.ac.jp/pages/30188/detail=1/b_id=35946/r_id=1814#block35946-1814" target="_blank">こちら</a>。</p>
+        <p class="explanation">9月7日と8日の2日間にわたって開催された「ながさきデジタルDEJI-MA産業メッセ」に長崎県立大学情報システム学科と看護学科の合同出展にボランティアとして参加しました。<br>展示内容は空間スイッチを用いた上肢のリハビリ支援システムとコミュニケーションロボットUniboを用いた独居高齢者のサポートシステムです。<br>
+          約80の企業や団体が出展するイベントで2日間で約4000人が来場されました。<br>来場された方の対応をする中で、初めてシステムを見る方にもわかりやく理解していただけるように伝える力を得ることができ、システムに対する多様な感想をいただく中で、システムを使う方のことを第一に考えることの大切さを学ぶことができました。<br>イベントの詳細は<a href=" https://digital-dejima.jp/" target="_blank">こちら</a>。大学HPでの紹介は<a href=" https://sun.ac.jp/pages/30188/detail=1/b_id=35946/r_id=1814#block35946-1814" target="_blank">こちら</a>。</p>
         
         <img src="images/slenna256.png" width="700" height="500">
         <p class="product2">卒業研究</p>
