--- a/work.html
+++ b/work.html
@@ -34,7 +34,7 @@
         
         <img src="images/slenna256.png" width="700" height="500">
         <p class="product2">卒業研究</p>
-        <p class="explanation">私が中学、高校と部活動で弓道を続けてきた中で苦しんだ「早気」を改善するシステムになっています。<br>「早気」というのは弓道の射法において、自分が矢を離そうと思っていないタイミングで離してしまう現象のことで、早気になることで狙いを定める余裕がなくなり的中率が格段に落ちてしまうことが課題になります。<br>同じように「早気」で苦しんでいる人の為に提供できればと思っています。<br>現在は弓道の矢を放つ前の動作である「会」の状態を、画像処理のエッジ検出をするところまで進んでいます。</p>
+        <p class="explanation">私が中学、高校と部活動で弓道を続けてきた中で苦しんだ「早気」を改善するシステムになっています。<br>「早気」というのは弓道の射法において、自分が矢を離そうと思っていないタイミングで離してしまう現象のことで、<br>早気になることで狙いを定める余裕がなくなり的中率が格段に落ちてしまうことが課題になります。<br>同じように「早気」で苦しんでいる人の為に提供できればと思っています。<br>現在は弓道の矢を放つ前の動作である「会」の状態を、画像処理のエッジ検出をするところまで進んでいます。</p>
       </div>
     </div>
 
