--- a/work.html
+++ b/work.html
@@ -25,7 +25,7 @@
       <div class="product">
         <a href="https://team-original-app-72914.web.app/"><img src="images/samuneb.jpg" width="450" height="300"></a>
         <p class="product1">〇ECサイト検索ができるWebアプリケーションを開発しました</p>
-        <p class="explanation">大学で学んだことを形にしたい想いからWebアプリケーションを開発する大学外のイベントに参加しました。<br>そのイベントで学んだ技術を用いたためプログラミングに苦戦しましたが、同じ開発のメンバーとお互いに助け合うことで完成させることができました。<br><br>楽天、Google、IT Bookstoreの3社の検索結果を一つの画面に表示できるようになっています。<br>IT Bookstoreは海外のサイトであるため日本語での検索に対応していません。そのため、検索結果は英語での検索時のみ表示されるようになっています。</p>
+        <p class="explanation">大学で学んだことを形にしたい想いからWebアプリケーションを開発する大学外のイベントに参加しました。<br>そのイベントで学んだ技術を用いたためプログラミングに苦戦しましたが、同じ開発のメンバーとお互いに助け合うことで完成させることができました。<br><br>楽天、Google、IT Bookstoreの3社の検索結果を一つの画面に表示できるようになっています。<br>※IT Bookstoreは海外のサイトであるため日本語での検索に対応していません。そのため、検索結果は英語での検索時のみ表示されるようになっています。</p>
 
         
         <p class="product1">〇「ながさきデジタルDEJI-MA産業メッセ2023」にボランティアとして参加しました</p>
