--- a/work.html
+++ b/work.html
@@ -34,7 +34,7 @@
 
       
         <img src="images/slenna256.png" width="700" height="500">
-        <p class="zuban">図1：弓道における「会（矢を放つ前の動作）」の状態</p>
+        <p class="zuban">図1：弓道における「会（矢を放つ前の動作）」の状態<br></p>
         <p class="product2">〇卒業研究</p>
         <p class="explanation">私が中学、高校と部活動で弓道を続けてきた中で苦しんだ「早気」を改善するシステムになっています。<br>「早気」というのは弓道の射法において、自分が矢を離そうと思っていないタイミングで離してしまう現象のことで、<br>早気になることで狙いを定める余裕がなくなり的中率が格段に落ちてしまうことが課題になります。<br>同じように「早気」で苦しんでいる人の為に提供できればと思いこの研究を選びました。<br><br>システム全体の流れとして、まず、図➀は弓道の射法の一つ「会（矢を放つ前の狙いを定める動作）」の状態を、画像処理のエッジ検出したものです。<br>
           この図➀から「会」の状態を定義づける左手、右手、右肘の3点の位置を記録しておきます。<br>次にもう一度同じように射を行って実際に自分が弓を引いて左手、右手、右肘の3点の位置が<br>記録しておいた3点の位置と一致したら音を鳴らすことで、今弓を引いている自分が「会」の状態にあるということを利用者に知らせます。<br>最後に「会」の一般的な長さとされている5秒が経過したら再び音を鳴らして利用者に知らせるシステムとなっています。</p>
